// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders /prihlasky/:id route 1`] = `
Object {
  "loadId": "6f09b1fd371dec1e99b7e1c9",
}
`;

exports[`renders /prihlasky/edit route 1`] = `Object {}`;

exports[`renders /prihlasky/reset route 1`] = `
Object {
  "reset": true,
}
`;
